A new start, initial DB redesigned

--- a/FamilyAuto/Views/Vehicle/Details.cshtml
+++ b/FamilyAuto/Views/Vehicle/Details.cshtml
@@ -66,6 +66,30 @@
             @Html.DisplayFor(model => model.DateUploaded)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.VehicleEngine.FuelType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.VehicleEngine.FuelType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.VehicleFeature.ExteriorColor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.VehicleFeature.ExteriorColor)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.VehicleHistory.Purpose)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.VehicleHistory.Purpose)
+        </dd>
+
     </dl>
 </div>
 <p>
