--- a/FamilyAuto/Views/Vehicle/Create.cshtml
+++ b/FamilyAuto/Views/Vehicle/Create.cshtml
@@ -66,6 +66,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DateUploaded, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                @Html.EditorFor(model => model.DateUploaded, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DateUploaded, "", new { @class = "text-danger" })
             </div>
         </div>
 
