--- a/FamilyAuto/Views/Vehicle/Authenticated.cshtml
+++ b/FamilyAuto/Views/Vehicle/Authenticated.cshtml
@@ -24,10 +24,11 @@
                         <div class="media-body">
                             <h4 class="media-heading">
 
-                                <asp:HyperLink ID="hlRestaurantName" Text='@Html.DisplayFor(modelItem => item.Model)' Font-Bold="True" Font-Underline="True" />
-
+                                <asp:HyperLink ID="hlRestaurantName" Text='@Html.DisplayFor(modelItem => item.Make)' Font-Bold="True" Font-Underline="True" />
+                                
+                                @Html.ActionLink(item.Make, "Details", new { id = item.Id })
                             </h4>
-                            <p class="address">@Html.DisplayFor(modelItem => item.Make)</p>
+                            <p class="address">@Html.DisplayFor(modelItem => item.Model)</p>
                             <p class="cuisine">@Html.DisplayFor(modelItem => item.Variant)</p>
                             <p>@Html.DisplayFor(modelItem => item.VehicleEngine.Power)</p>
                             <p class="show-read-more">@Html.DisplayFor(modelItem => item.VehicleFeature.ExteriorColor)</p>
