Succefully tested displaying picture url in the details view, but now having troubles to update multiple tables at once.

--- a/FamilyAuto/Views/Vehicle/Details.cshtml
+++ b/FamilyAuto/Views/Vehicle/Details.cshtml
@@ -89,7 +89,15 @@
         <dd>
             @Html.DisplayFor(model => model.VehicleHistory.Purpose)
         </dd>
-
+        @foreach (var item in Model.VehiclePictures)
+        {
+            if (item.VehicleID == ViewBag.VehicleID)
+            {
+                <dd>
+                    <img src="@item.ImageURL" />
+                </dd>
+            }
+        }
     </dl>
 </div>
 <p>
