--- a/FamilyAuto/Content/Site.css
+++ b/FamilyAuto/Content/Site.css
@@ -22,3 +22,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.item-list-spc {
+    margin: 2em 1em 2em 0;
+}
+
+.image-listview {
+    width: 150px;
+    height: 150px;
+}
