Home page modified to make it more personal and added links to some of the existing pages.

--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -1,32 +1,28 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Family Auto";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Family Auto</h1>
+    @Html.ActionLink("SHOWROOM", "Showroom", new { Controller = "Vehicle" }, new { @class = "btn btn-primary btn-lg" })
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <h2>Test with Git updates</h2>
+        <h2>Showroom</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Explore our vast selection of vehicles and choose the car in which you envision your future.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("SHOWROOM", "Showroom", new {Controller = "Vehicle" }, new {@class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
+        <h2>Services</h2>
         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p>@Html.ActionLink("Services", "Index", new { Controller = "Services" }, new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Contact</h2>
+        <p>Have you checked your oil lately? When's the last time you had the axis alligned? Enter right here and we'll be happy to help.</p>
+        <p>@Html.ActionLink("Services", "Contact", new { Controller = "Home" }, new { @class = "btn btn-default" })</p>
     </div>
 </div>
