Added few more visual elements, contact form is added but not functional. IMS and CMS section, the later works to some extent.

--- a/FamilyAuto/Views/Home/Index.cshtml
+++ b/FamilyAuto/Views/Home/Index.cshtml
@@ -13,16 +13,47 @@
         <p>
             Explore our vast selection of vehicles and choose the car in which you envision your future.
         </p>
-        <p>@Html.ActionLink("SHOWROOM", "Showroom", new {Controller = "Vehicle" }, new {@class = "btn btn-default" })</p>
+        <p>@Html.ActionLink("SHOWROOM", "Showroom", new { Controller = "Vehicle" }, new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
         <h2>Services</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p>Have you checked your oil lately? When's the last time you had the axis alligned? Enter right here and we'll be happy to help.</p>
         <p>@Html.ActionLink("Services", "Index", new { Controller = "Services" }, new { @class = "btn btn-default" })</p>
     </div>
     <div class="col-md-4">
         <h2>Contact</h2>
-        <p>Have you checked your oil lately? When's the last time you had the axis alligned? Enter right here and we'll be happy to help.</p>
+        <p>Give us a call or come visit us.</p>
         <p>@Html.ActionLink("Services", "Contact", new { Controller = "Home" }, new { @class = "btn btn-default" })</p>
+    </div>
+</div>
+
+<div class="row">
+    <h2>NEWS</h2>
+    <div class="col-md-4">
+        <p>@DateTime.Today.ToShortDateString()</p>
+        <p>
+            As reported by Automotive News, the lawsuit was filed earlier this month in Michigan by a former employee, Daniel Donovan, who was fired in early December.
+            The suit alleges that VW deleted data for three days in September, after the company was notified that vehicles equipped with its 2.0-liter TDI engines
+            violated U.S. emissions standards. It also claims the company’s IT department also failed to preserve backup disks. Donovan, who was responsible
+            for information management and product liability cases, says in his lawsuit that he reported the deletions to his supervisor.
+        </p>
+    </div>
+    <div class="col-md-4">
+        <p>@DateTime.Today.ToShortDateString()</p>
+        <p>
+            As reported by Automotive News, the lawsuit was filed earlier this month in Michigan by a former employee, Daniel Donovan, who was fired in early December.
+            The suit alleges that VW deleted data for three days in September, after the company was notified that vehicles equipped with its 2.0-liter TDI engines
+            violated U.S. emissions standards. It also claims the company’s IT department also failed to preserve backup disks. Donovan, who was responsible
+            for information management and product liability cases, says in his lawsuit that he reported the deletions to his supervisor.
+        </p>
+    </div>
+    <div class="col-md-4">
+        <p>@DateTime.Today.ToShortDateString()</p>
+        <p>
+            As reported by Automotive News, the lawsuit was filed earlier this month in Michigan by a former employee, Daniel Donovan, who was fired in early December.
+            The suit alleges that VW deleted data for three days in September, after the company was notified that vehicles equipped with its 2.0-liter TDI engines
+            violated U.S. emissions standards. It also claims the company’s IT department also failed to preserve backup disks. Donovan, who was responsible
+            for information management and product liability cases, says in his lawsuit that he reported the deletions to his supervisor.
+        </p>
     </div>
 </div>
