--- a/FamilyAuto/Views/Article/Index.cshtml
+++ b/FamilyAuto/Views/Article/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<FamilyAuto.Models.Articles>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Manage News and Services";
 }
 
 <h2>Index</h2>
