--- a/FamilyAuto/Views/Home/Contact.cshtml
+++ b/FamilyAuto/Views/Home/Contact.cshtml
@@ -5,15 +5,15 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    One Way Street<br />
+    Capitol, 190 001 <br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    777.444.1111
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>General information:</strong>   <a href="mailto:info@family-auto.com">Support@example.com</a><br />
+    <strong>Sales:</strong> <a href="mailto:sales@family-auto.com">Marketing@example.com</a>
 </address>
 <br /><br /><br />
 
