--- a/FamilyAuto/Views/Vehicle/Details.cshtml
+++ b/FamilyAuto/Views/Vehicle/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Details</h2>
 
-<div>
+<div class="col-md-6">
     <h4>Vehicle</h4>
     <hr />
     <dl class="dl-horizontal">
@@ -89,16 +89,18 @@
         <dd>
             @Html.DisplayFor(model => model.VehicleHistory.Purpose)
         </dd>
-        @foreach (var item in Model.VehiclePictures)
-        {
-            if (item.VehicleID == ViewBag.VehicleID)
-            {
-                <dd>
-                    <img src="@item.ImageURL" />
-                </dd>
-            }
-        }
     </dl>
+</div>
+<div class="col-md-6">
+    @foreach (var item in Model.VehiclePictures)
+    {
+        if (item.VehicleID == ViewBag.VehicleID)
+        {
+            <dd>
+                <img src="@item.ImageURL" />
+            </dd>
+        }
+    }
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
