--- a/FamilyAuto/Views/Vehicle/Showroom.cshtml
+++ b/FamilyAuto/Views/Vehicle/Showroom.cshtml
@@ -45,9 +45,9 @@
                     <div class="media-body">
                         <h4 class="media-heading">
 
-                            <asp:HyperLink ID="@item.Make" Text='@Html.DisplayFor(modelItem => item.Make)' Font-Bold="True" Font-Underline="True" />
+                            @*<asp:HyperLink ID="@item.Make" Text='@Html.DisplayFor(modelItem => item.Make)' Font-Bold="True" Font-Underline="True" />*@
 
-                            @Html.ActionLink(item.Make, "Details", new { id = item.Id })
+                            @Html.ActionLink(item.Make, "Details", new { id = item.Id }) - @Html.DisplayFor(modelItem => item.Price)€
                         </h4>
                         <p class="address">Model: @Html.DisplayFor(modelItem => item.Model), Variant: @Html.DisplayFor(modelItem => item.Variant)</p>
                         <p class="power">@Html.DisplayFor(modelItem => item.VehicleEngine.Power)KW</p>
